# barakahpay

./: BUSINESS_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEAM_ROLES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: contracts-ci.yml
backend/: .env.example  .gitignore  .npmrc  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: config.ts  server.ts
backend/src/db/: client.ts  migrate.ts  schema.ts
backend/src/db/migrations/: 0000_clumsy_lady_deathstrike.sql
backend/src/db/migrations/meta/: 0000_snapshot.json  (+1 more)
backend/src/lib/: id.ts
backend/src/routes/: health.ts  index.ts  institutions.ts  transactions.ts  waitlist.ts
backend/src/stellar/: client.ts  contracts.ts
contracts/: .deployed-escrow-testnet.txt  .deployed-registry-testnet.txt  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
contracts/escrow/: Cargo.toml  DEPLOYMENT.md  README.md
contracts/escrow/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml  DEPLOYMENT.md  README.md
contracts/registry/src/: lib.rs  test.rs
docs/: architecture.md  roadmap.md
web/: .env.example  .gitignore  .npmrc  README.md  i18n.ts  navigation.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css
web/app/[locale]/: layout.tsx  page.tsx
web/app/api/waitlist/: route.ts
web/components/: features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  waitlist-form.tsx
web/messages/: en.json  ur.json
