[package]
name = "barakahpay-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Purpose-bound escrow contract for BarakahPay remittances on Soroban"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
