[package]
name = "barakahpay-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Verified institution registry for BarakahPay — KYB-gated schools, hospitals, utilities"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
